test/isabelle/negative-tests/ratCFI.p
module ratCFI {

  // produces type ratCFI, approximate representations screws up, and Isabelle doesn't type-check
  j = 1.11 ^ 3.13 * 21.21

}